# django-better-errors

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: testing.yml
django_better_errors/: views.py
testing/: manage.py  settings.py  urls.py
